fix bg-img too short issue

--- a/app/assets/stylesheets/tours.scss
+++ b/app/assets/stylesheets/tours.scss
@@ -15,6 +15,7 @@
     background-size: cover;
     background-position: 50% 50%;
     background-color: #f5f5f5;
+    min-height: 220px;
   }
 
   .clearing-container {
